--- a/index.html
+++ b/index.html
@@ -3,117 +3,123 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>КБ / Производственная студия</title>
+<title>КБ Производство решений</title>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 <style>
-  :root {
-    --primary-color: #0a0f1a;
-    --secondary-color: #1c1f2a;
-    --accent-color: #00d1ff;
-    --text-color: #f5f5f5;
-    --muted-color: #888;
-    --font: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
   body {
-    margin: 0;
-    font-family: var(--font);
-    background: var(--primary-color);
-    color: var(--text-color);
+    margin:0;
+    font-family: 'Roboto', sans-serif;
+    background: #f5f5f5;
+    color: #111;
   }
-  a { color: var(--accent-color); text-decoration: none; }
+  a { text-decoration: none; color: inherit; }
+
+  /* Шапка */
   header {
-    position: relative;
-    height: 250px;
-    background: var(--secondary-color);
+    width: 100%;
+    height: 150px;
+    background: url('header-placeholder.jpg') center/cover no-repeat;
     display: flex;
     align-items: center;
-    justify-content: center;
+    padding-left: 40px;
   }
-  header img { width: 100%; height: 100%; object-fit: cover; }
-  .cta-strip {
+  header .logo { font-weight: 700; font-size: 24px; color: #fff; }
+
+  /* Быстрые контакты */
+  .cta-bar {
     display: flex;
-    justify-content: center;
-    gap: 40px;
-    padding: 15px;
-    background: var(--secondary-color);
+    justify-content: flex-start;
+    padding: 10px 40px;
+    background: #222;
+    gap: 20px;
   }
-  .cta-strip a {
+  .cta-bar a {
+    font-size: 24px;
+    color: #fff;
     display: flex;
     align-items: center;
-    justify-content: center;
-    width: 50px; height: 50px;
-    background: var(--accent-color);
-    border-radius: 50%;
-    color: var(--primary-color);
-    font-weight: bold;
+    gap: 8px;
   }
-  main { padding: 50px 20px; max-width: 1200px; margin: auto; }
-  h2 { margin-bottom: 20px; }
+
+  /* Главный блок - шаги */
   .steps {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 60px 20px;
     gap: 30px;
+    background: #fff;
   }
   .step-card {
-    background: var(--secondary-color);
+    width: 250px;
     padding: 20px;
+    background: #f0f0f0;
     border-radius: 12px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     text-align: center;
   }
-  .step-card img { width: 80px; height: 80px; margin-bottom: 15px; }
-  .step-card h3 { margin-bottom: 10px; font-size: 1.2em; }
-  .step-card p { font-style: italic; color: var(--muted-color); }
+  .step-card img {
+    width: 64px;
+    height: 64px;
+    margin-bottom: 12px;
+  }
+  .step-card .step-title {
+    font-weight: 500;
+    font-size: 18px;
+    margin-bottom: 8px;
+  }
+  .step-card .step-desc {
+    font-style: italic;
+    font-size: 14px;
+    color: #555;
+  }
 
+  /* Кейсы */
   .cases {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    padding: 60px 20px;
+    background: #e8e8e8;
+  }
+  .case-group {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 40px;
     gap: 20px;
-    margin: 50px 0;
   }
   .case-group img {
-    width: 100%;
-    height: 200px;
+    width: 200px;
+    height: 150px;
     object-fit: cover;
     border-radius: 8px;
   }
 
+  /* Этапы */
   .pipeline {
-    background: var(--secondary-color);
-    padding: 40px 20px;
-    border-radius: 12px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-    justify-content: space-around;
-    margin: 50px 0;
-  }
-  .pipeline-step {
+    padding: 60px 20px;
+    background: #fff;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 150px;
+    gap: 40px;
+  }
+  .pipeline-step {
+    display: flex;
+    align-items: center;
+    gap: 20px;
   }
   .pipeline-step img {
-    width: 60px;
-    height: 60px;
-    margin-bottom: 10px;
-  }
-  .pipeline-step p {
-    font-size: 0.9em;
-    color: var(--muted-color);
-    text-align: center;
+    width: 48px;
+    height: 48px;
   }
 
+  /* Отзывы */
   .reviews {
-    margin: 50px 0;
+    padding: 60px 20px;
+    background: #e8e8e8;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 20px;
   }
   .review-card {
-    background: var(--secondary-color);
+    background: #fff;
     padding: 20px;
     border-radius: 12px;
   }
@@ -121,239 +127,231 @@
     width: 100%;
     height: 180px;
     object-fit: cover;
+    margin-bottom: 12px;
     border-radius: 8px;
-    margin-bottom: 15px;
   }
-  .review-card p { font-style: italic; color: var(--muted-color); }
 
+  /* FAQ */
   .faq {
-    margin: 50px 0;
+    padding: 60px 20px;
+    background: #fff;
   }
-  .faq-item {
-    margin-bottom: 15px;
+  .faq-group {
+    margin-bottom: 20px;
   }
-  .faq-item summary {
+  .faq-group summary {
+    font-weight: 500;
     cursor: pointer;
-    font-weight: bold;
-    padding: 10px;
-    background: var(--secondary-color);
-    border-radius: 6px;
+    margin-bottom: 8px;
   }
-  .faq-item p {
-    margin: 5px 15px;
-    font-style: italic;
-    color: var(--muted-color);
-  }
+  .faq-group details[open] summary { color: #007acc; }
+  .faq-group p { margin: 4px 0; font-size: 14px; }
 
+  /* Контакты */
   .contacts {
-    background: var(--secondary-color);
-    padding: 40px 20px;
-    border-radius: 12px;
-    margin: 50px 0;
+    padding: 60px 20px;
+    background: #e8e8e8;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    max-width: 600px;
+    margin: auto;
   }
   .contacts form {
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 10px;
   }
-  .contacts input, .contacts textarea, .contacts button {
+  .contacts input, .contacts textarea {
     padding: 10px;
     border-radius: 6px;
-    border: none;
-    font-family: var(--font);
+    border: 1px solid #ccc;
+    font-size: 14px;
   }
   .contacts button {
-    background: var(--accent-color);
-    color: var(--primary-color);
+    padding: 12px;
+    border: none;
+    border-radius: 6px;
+    background: #007acc;
+    color: #fff;
+    font-size: 16px;
     cursor: pointer;
   }
 
+  /* Корпоратив */
   .corporate {
-    margin: 50px 0;
+    padding: 60px 20px;
+    background: #fff;
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 12px;
   }
-  .corporate a { display: block; padding: 10px; background: var(--secondary-color); border-radius: 6px; }
+  .corporate a {
+    color: #007acc;
+    font-size: 14px;
+  }
 
-  /* Левый якорь */
-  .side-contact {
+  /* Полоса слева для перехода к контактам */
+  .left-bar {
     position: fixed;
-    left: 10px;
     top: 50%;
+    left: 0;
     transform: translateY(-50%);
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
+    background: #007acc;
+    border-radius: 0 6px 6px 0;
+    padding: 10px;
   }
-  .side-contact a {
-    width: 40px; height: 40px;
-    background: var(--accent-color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    color: var(--primary-color);
-    font-weight: bold;
-  }
+  .left-bar a { display: block; color: #fff; margin: 10px 0; text-align: center; }
 </style>
 </head>
 <body>
 
-<!-- Левый якорь -->
-<div class="side-contact">
-  <a href="#contacts">C</a>
+<!-- Полоса слева -->
+<div class="left-bar">
+  <a href="#contacts">📞</a>
 </div>
 
 <!-- Шапка -->
 <header>
-  <img src="https://via.placeholder.com/1200x250" alt="Общий вид мастерской и производственного процесса">
+  <div class="logo">КБ Решений</div>
 </header>
 
 <!-- CTA -->
-<div class="cta-strip">
-  <a href="https://wa.me/"><img src="https://via.placeholder.com/24" alt="WhatsApp">W</a>
-  <a href="https://t.me/"><img src="https://via.placeholder.com/24" alt="Telegram">T</a>
-  <a href="mailto:example@mail.com"><img src="https://via.placeholder.com/24" alt="Email">E</a>
-  <a href="#contacts"><img src="https://via.placeholder.com/24" alt="Контакты на странице">↓</a>
+<div class="cta-bar">
+  <a href="https://wa.me/0000000000">💬 WhatsApp</a>
+  <a href="tg://resolve?domain=username">✈️ Telegram</a>
+  <a href="mailto:info@example.com">✉️ Email</a>
+  <a href="#contacts">⬇️ Контакты</a>
 </div>
 
-<main>
-  <!-- Шаги для клиента -->
-  <section class="steps">
-    <h2>Ваш путь к решению</h2>
-    <div class="step-card">
-      <img src="https://via.placeholder.com/80" alt="Иконка: первый контакт">
-      <h3>Первый контакт</h3>
-      <p>Вы описываете задачу и ограничения. Мы фиксируем это и делаем первые наброски решения.</p>
-    </div>
-    <div class="step-card">
-      <img src="https://via.placeholder.com/80" alt="Иконка: анализ задачи">
-      <h3>Анализ задачи</h3>
-      <p>Оцениваем шаги, необходимые для реализации. Формируем визуализацию решения для понимания процесса.</p>
-    </div>
-    <div class="step-card">
-      <img src="https://via.placeholder.com/80" alt="Иконка: предложение решения">
-      <h3>Предложение решения</h3>
-      <p>Готовим рабочее предложение с деталями по этапам, материалам и срокам.</p>
-    </div>
-    <div class="step-card">
-      <img src="https://via.placeholder.com/80" alt="Иконка: закрепление решения">
-      <h3>Закрепление решения</h3>
-      <p>Согласуем условия и запускаем работу, уточняем оплату и контрольные точки.</p>
-    </div>
-    <div class="step-card">
-      <img src="https://via.placeholder.com/80" alt="Иконка: работа над проектом">
-      <h3>Работа над проектом</h3>
-      <p>Выполняем проект по шагам с промежуточной проверкой результатов и корректировкой при необходимости.</p>
-    </div>
-    <div class="step-card">
-      <img src="https://via.placeholder.com/80" alt="Иконка: готовое изделие">
-      <h3>Готовое изделие</h3>
-      <p>Передаём продукт с инструкциями и рекомендациями по использованию.</p>
-    </div>
-    <div class="step-card">
-      <img src="https://via.placeholder.com/80" alt="Иконка: поддержка после передачи">
-      <h3>Поддержка после передачи</h3>
-      <p>Вы можете обращаться с уточнениями, повторным изготовлением и новыми запросами.</p>
-    </div>
-  </section>
+<!-- Главный блок - шаги -->
+<section class="steps">
+  <div class="step-card">
+    <img src="placeholder-step1.jpg" alt="Понимание задачи">
+    <div class="step-title">Первичный контакт</div>
+    <div class="step-desc">Вы рассказываете задачу — мы делаем первые наброски решения.</div>
+  </div>
+  <div class="step-card">
+    <img src="placeholder-step2.jpg" alt="Анализ задачи">
+    <div class="step-title">Анализ задачи</div>
+    <div class="step-desc">Оцениваем, какие шаги нужны для реализации и формируем схему решения.</div>
+  </div>
+  <div class="step-card">
+    <img src="placeholder-step3.jpg" alt="Предложение решения">
+    <div class="step-title">Предложение решения</div>
+    <div class="step-desc">Показываем план работы, материалы, сроки и этапы проекта.</div>
+  </div>
+  <div class="step-card">
+    <img src="placeholder-step4.jpg" alt="Закрепление решения">
+    <div class="step-title">Закрепление решения</div>
+    <div class="step-desc">Согласовываем детали, фиксируем оплату и запускаем работу.</div>
+  </div>
+  <div class="step-card">
+    <img src="placeholder-step5.jpg" alt="Работа над проектом">
+    <div class="step-title">Работа над проектом</div>
+    <div class="step-desc">Выполняем проект по шагам с промежуточной проверкой деталей.</div>
+  </div>
+  <div class="step-card">
+    <img src="placeholder-step6.jpg" alt="Готовое изделие">
+    <div class="step-title">Готовое изделие</div>
+    <div class="step-desc">Передаем продукт с инструкциями и рекомендациями по эксплуатации.</div>
+  </div>
+  <div class="step-card">
+    <img src="placeholder-step7.jpg" alt="Поддержка после передачи">
+    <div class="step-title">Поддержка после передачи</div>
+    <div class="step-desc">Остаёмся на связи для уточнений и новых версий изделия.</div>
+  </div>
+</section>
 
-  <!-- Кейсы -->
-  <section class="cases">
-    <h2>Примеры решений</h2>
-    <div class="case-group">
-      <img src="https://via.placeholder.com/300x200" alt="Прототип изделия, серия 1, изображение 1">
-      <img src="https://via.placeholder.com/300x200" alt="Прототип изделия, серия 1, изображение 2">
-      <img src="https://via.placeholder.com/300x200" alt="Прототип изделия, серия 1, изображение 3">
-    </div>
-    <div class="case-group">
-      <img src="https://via.placeholder.com/300x200" alt="Прототип изделия, серия 2, изображение 1">
-      <img src="https://via.placeholder.com/300x200" alt="Прототип изделия, серия 2, изображение 2">
-      <img src="https://via.placeholder.com/300x200" alt="Прототип изделия, серия 2, изображение 3">
-    </div>
-    <div class="case-group">
-      <img src="https://via.placeholder.com/300x200" alt="Прототип изделия, серия 3, изображение 1">
-      <img src="https://via.placeholder.com/300x200" alt="Прототип изделия, серия 3, изображение 2">
-      <img src="https://via.placeholder.com/300x200" alt="Прототип изделия, серия 3, изображение 3">
-    </div>
-  </section>
+<!-- Кейсы -->
+<section class="cases">
+  <div class="case-group">
+    <img src="case1-1.jpg" alt="Кейс 1, изображение 1">
+    <img src="case1-2.jpg" alt="Кейс 1, изображение 2">
+    <img src="case1-3.jpg" alt="Кейс 1, изображение 3">
+  </div>
+  <div class="case-group">
+    <img src="case2-1.jpg" alt="Кейс 2, изображение 1">
+    <img src="case2-2.jpg" alt="Кейс 2, изображение 2">
+    <img src="case2-3.jpg" alt="Кейс 2, изображение 3">
+  </div>
+  <div class="case-group">
+    <img src="case3-1.jpg" alt="Кейс 3, изображение 1">
+    <img src="case3-2.jpg" alt="Кейс 3, изображение 2">
+    <img src="case3-3.jpg" alt="Кейс 3, изображение 3">
+  </div>
+</section>
 
-  <!-- Этапы / пайплайн -->
-  <section class="pipeline">
-    <h2>Внутренний процесс</h2>
-    <div class="pipeline-step">
-      <img src="https://via.placeholder.com/60" alt="Иконка: исследование">
-      <p>Исследование и измерения</p>
-    </div>
-    <div class="pipeline-step">
-      <img src="https://via.placeholder.com/60" alt="Иконка: моделирование">
-      <p>Моделирование и прототип</p>
-    </div>
-    <div class="pipeline-step">
-      <img src="https://via.placeholder.com/60" alt="Иконка: производство">
-      <p>Производство и тестирование</p>
-    </div>
-    <div class="pipeline-step">
-      <img src="https://via.placeholder.com/60" alt="Иконка: доставка">
-      <p>Доставка и установка</p>
-    </div>
-  </section>
+<!-- Этапы -->
+<section class="pipeline">
+  <div class="pipeline-step">
+    <img src="pipeline1.png" alt="Этап 1">
+    <div>Подготовка и проектирование</div>
+  </div>
+  <div class="pipeline-step">
+    <img src="pipeline2.png" alt="Этап 2">
+    <div>Прототипирование</div>
+  </div>
+  <div class="pipeline-step">
+    <img src="pipeline3.png" alt="Этап 3">
+    <div>Производство</div>
+  </div>
+  <div class="pipeline-step">
+    <img src="pipeline4.png" alt="Этап 4">
+    <div>Тестирование и контроль качества</div>
+  </div>
+  <div class="pipeline-step">
+    <img src="pipeline5.png" alt="Этап 5">
+    <div>Передача клиенту</div>
+  </div>
+</section>
 
-  <!-- Отзывы -->
-  <section class="reviews">
-    <h2>Примеры применения</h2>
-    <div class="review-card">
-      <img src="https://via.placeholder.com/600x180" alt="Пример использования изделия клиентом 1">
-      <p>«Изделие полностью соответствует требованиям, все этапы были понятны и удобны для контроля»</p>
-    </div>
-    <div class="review-card">
-      <img src="https://via.placeholder.com/600x180" alt="Пример использования изделия клиентом 2">
-      <p>«Процесс согласования и изготовления прошёл гладко, готовый продукт пригодился сразу»</p>
-    </div>
-  </section>
+<!-- Отзывы -->
+<section class="reviews">
+  <div class="review-card">
+    <img src="review1.jpg" alt="Пример применения изделия 1">
+    <div>«Изделие полностью соответствует ожиданиям и решает задачу.»</div>
+  </div>
+  <div class="review-card">
+    <img src="review2.jpg" alt="Пример применения изделия 2">
+    <div>«Процесс согласования и прототипирования прошёл легко, результат качественный.»</div>
+  </div>
+</section>
 
-  <!-- Вопросы -->
-  <section class="faq">
-    <h2>Вопросы и ответы</h2>
-    <details class="faq-item">
-      <summary>Сроки выполнения проекта</summary>
-      <p>Ориентировочно от 1 до 4 недель в зависимости от сложности.</p>
-    </details>
-    <details class="faq-item">
-      <summary>Материалы и их выбор</summary>
-      <p>Используем подходящие материалы, согласуем с клиентом по прочности и весу.</p>
-    </details>
-    <details class="faq-item">
-      <summary>Контроль на промежуточных этапах</summary>
-      <p>Все этапы сопровождаются фото и визуализацией для согласования деталей.</p>
-    </details>
-  </section>
+<!-- FAQ -->
+<section class="faq">
+  <details class="faq-group">
+    <summary>Материалы и изготовление</summary>
+    <p>Какие материалы используются? — В зависимости от задачи, от пластика до металлов.</p>
+    <p>Можно ли индивидуализировать форму? — Да, под конкретные размеры клиента.</p>
+  </details>
+  <details class="faq-group">
+    <summary>Сроки и доставка</summary>
+    <p>Сколько времени занимает изготовление? — Обычно от нескольких дней до нескольких недель, в зависимости от сложности.</p>
+    <p>Как доставляется изделие? — Курьером, самовывозом или транспортной компанией.</p>
+  </details>
+</section>
 
-  <!-- Контакты -->
-  <section class="contacts" id="contacts">
-    <h2>Контакты</h2>
-    <p>Телефон: +7 900 000-00-00</p>
-    <p>WhatsApp: <a href="https://wa.me/">Ссылка</a></p>
-    <p>Telegram: <a href="https://t.me/">Ссылка</a></p>
-    <p>Email: <a href="mailto:example@mail.com">example@mail.com</a></p>
+<!-- Контакты -->
+<section class="contacts" id="contacts">
+  <div>Телефон: +7 000 000-00-00</div>
+  <div>WhatsApp: +7 000 000-00-00</div>
+  <div>Telegram: @username</div>
+  <div>Email: info@example.com</div>
+  <form>
+    <input type="text" placeholder="Ваше имя">
+    <input type="email" placeholder="Email">
+    <textarea placeholder="Опишите задачу" rows="4"></textarea>
+    <button type="submit">Отправить</button>
+  </form>
+</section>
 
-    <form>
-      <input type="text" placeholder="Ваше имя">
-      <input type="email" placeholder="Email">
-      <textarea placeholder="Описание задачи"></textarea>
-      <button type="submit">Отправить</button>
-    </form>
-  </section>
-
-  <!-- Корпоратив -->
-  <section class="corporate">
-    <h2>Документация для корпоративных клиентов</h2>
-    <a href="#">Пример договора</a>
-    <a href="#">Пример технического задания</a>
-    <a href="#">Пример документации по проекту</a>
-  </section>
-</main>
+<!-- Корпоратив -->
+<section class="corporate">
+  <a href="#">Пример договора (PDF)</a>
+  <a href="#">Пример документации (PDF)</a>
+  <a href="#">Пример технического задания (PDF)</a>
+</section>
 
 </body>
 </html>
