--- a/index.html
+++ b/index.html
@@ -5,239 +5,168 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>КБ / Производственная студия</title>
   <style>
-    /* --- Базовые стили --- */
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Roboto, sans-serif;
-      background: #f4f6f8;
-      color: #1c1c1c;
-      scroll-behavior: smooth;
-    }
-    a { text-decoration: none; color: inherit; }
-    img { max-width: 100%; display: block; }
+/* ==== Основные стили ==== */
+body {
+  font-family: 'Segoe UI', Roboto, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #111418;
+  color: #E0E0E0;
+}
 
-    /* --- Шапка --- */
-    header {
-      background: #0a1e36;
-      color: #fff;
-      padding: 15px 30px;
-      display: flex;
-      align-items: center;
-      height: 80px;
-    }
-    header .logo {
-      font-size: 1.5em;
-      font-weight: bold;
-    }
+/* ==== Шапка ==== */
+header {
+  background: #1C1F26;
+  color: #E0E0E0;
+  padding: 1rem;
+  text-align: center;
+  border-bottom: 2px solid #00D4FF;
+}
 
-    /* --- CTA полоска --- */
-    .cta-bar {
-      background: #1c2b42;
-      display: flex;
-      justify-content: center;
-      padding: 10px 0;
-    }
-    .cta-bar a {
-      margin: 0 15px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      color: #fff;
-      font-size: 0.9em;
-    }
-    .cta-bar a img {
-      width: 32px;
-      margin-bottom: 5px;
-    }
+/* ==== CTA полоса ==== */
+.cta-bar {
+  display: flex;
+  justify-content: center;
+  gap: 1.5rem;
+  background: #181B22;
+  padding: 0.8rem;
+  border-top: 1px solid #9A4DFF;
+  border-bottom: 1px solid #9A4DFF;
+}
 
-    /* --- Главный блок (шаги) --- */
-    .steps {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      padding: 50px 20px;
-      gap: 30px;
-      background: #e9edf4;
-    }
-    .step-card {
-      background: #fff;
-      flex: 1 1 250px;
-      max-width: 300px;
-      padding: 25px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-    }
-    .step-card img {
-      width: 60px;
-      margin-bottom: 20px;
-    }
-    .step-card h3 {
-      margin: 0 0 10px 0;
-      font-size: 1.2em;
-    }
-    .step-card p {
-      font-style: italic;
-      font-size: 0.95em;
-      color: #555;
-    }
+.cta-bar a {
+  color: #00D4FF;
+  font-size: 1.2rem;
+  text-decoration: none;
+  transition: 0.3s;
+}
+.cta-bar a:hover {
+  color: #9A4DFF;
+}
 
-    /* --- Кейсы --- */
-    .cases {
-      padding: 50px 20px;
-      background: #f4f6f8;
-    }
-    .case-group {
-      display: flex;
-      justify-content: center;
-      gap: 15px;
-      margin-bottom: 40px;
-    }
-    .case-group img {
-      flex: 1;
-      max-width: 300px;
-      border-radius: 10px;
-      object-fit: cover;
-    }
+/* ==== Главные карточки шагов ==== */
+.steps {
+  display: grid;
+  gap: 1.5rem;
+  padding: 2rem;
+}
 
-    /* --- Этапы --- */
-    .pipeline {
-      padding: 50px 20px;
-      background: #e9edf4;
-      text-align: center;
-    }
-    .pipeline h2 {
-      margin-bottom: 30px;
-    }
-    .pipeline-icons {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 40px;
-    }
-    .pipeline-icons div {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 120px;
-    }
-    .pipeline-icons div img {
-      width: 50px;
-      margin-bottom: 10px;
-    }
+.step-card {
+  background: #1C1F26;
+  border-left: 4px solid #00D4FF;
+  padding: 1.5rem;
+  border-radius: 12px;
+  transition: transform 0.2s ease;
+}
+.step-card:hover {
+  transform: translateX(5px);
+}
+.step-card h3 {
+  font-size: 1.5rem;
+  color: #00D4FF;
+}
+.step-card p {
+  font-style: italic;
+  color: #B0B0B0;
+}
 
-    /* --- Отзывы --- */
-    .reviews {
-      padding: 50px 20px;
-      background: #f4f6f8;
-      text-align: center;
-    }
-    .review-card {
-      background: #fff;
-      border-radius: 12px;
-      padding: 25px;
-      max-width: 400px;
-      margin: 15px auto;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-    }
-    .review-card p {
-      font-style: italic;
-      color: #555;
-    }
+/* ==== Кейсы ==== */
+.cases {
+  background: #181B22;
+  padding: 2rem;
+}
+.case-group {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+}
+.case-img {
+  width: 30%;
+  background: #222;
+  border-radius: 10px;
+  height: 180px;
+  box-shadow: 0 0 10px rgba(0,212,255,0.3);
+}
 
-    /* --- Вопросы --- */
-    .faq {
-      padding: 50px 20px;
-      background: #e9edf4;
-      max-width: 800px;
-      margin: 0 auto;
-    }
-    .faq h3 {
-      cursor: pointer;
-      padding: 10px;
-      background: #1c2b42;
-      color: #fff;
-      border-radius: 6px;
-      margin-bottom: 5px;
-    }
-    .faq div {
-      display: none;
-      padding: 10px 15px;
-      background: #fff;
-      border-radius: 6px;
-      margin-bottom: 10px;
-    }
+/* ==== Этапы (пайплайн) ==== */
+.pipeline {
+  background: #111418;
+  padding: 2rem;
+}
+.pipeline-step {
+  display: inline-block;
+  margin: 1rem;
+  padding: 1rem 1.5rem;
+  background: #1C1F26;
+  border-radius: 10px;
+  color: #E0E0E0;
+  border: 1px solid #9A4DFF;
+}
 
-    /* --- Контакты --- */
-    .contacts {
-      padding: 50px 20px;
-      background: #f4f6f8;
-      max-width: 600px;
-      margin: 0 auto;
-    }
-    .contacts h2 {
-      margin-bottom: 25px;
-      text-align: center;
-    }
-    .contacts ul {
-      list-style: none;
-      padding: 0;
-      margin-bottom: 25px;
-    }
-    .contacts li {
-      margin-bottom: 10px;
-    }
-    .contact-form {
-      display: none;
-      flex-direction: column;
-      gap: 10px;
-    }
-    .contact-form input, .contact-form textarea {
-      padding: 10px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      width: 100%;
-    }
-    .contact-form button {
-      padding: 10px;
-      border: none;
-      border-radius: 6px;
-      background: #0a1e36;
-      color: #fff;
-      cursor: pointer;
-    }
+/* ==== Отзывы ==== */
+.testimonials {
+  padding: 2rem;
+}
+.testimonial {
+  background: #1C1F26;
+  padding: 1.2rem;
+  border-left: 4px solid #9A4DFF;
+  margin-bottom: 1rem;
+  border-radius: 8px;
+  font-style: italic;
+}
 
-    /* --- Корпоратив --- */
-    .corporate {
-      padding: 50px 20px;
-      background: #e9edf4;
-      max-width: 800px;
-      margin: 0 auto;
-    }
-    .corporate ul {
-      list-style: none;
-      padding: 0;
-    }
-    .corporate li {
-      margin-bottom: 10px;
-    }
+/* ==== FAQ ==== */
+.faq {
+  padding: 2rem;
+}
+.faq-item {
+  background: #181B22;
+  margin: 0.5rem 0;
+  border-radius: 8px;
+  overflow: hidden;
+}
+.faq-question {
+  padding: 1rem;
+  cursor: pointer;
+  font-weight: bold;
+  color: #00D4FF;
+}
+.faq-answer {
+  padding: 1rem;
+  display: none;
+  color: #C0C0C0;
+}
+.faq-item.active .faq-answer {
+  display: block;
+}
 
-    /* --- Прочее --- */
-    .scroll-left {
-      position: fixed;
-      top: 50%;
-      left: 10px;
-      transform: translateY(-50%);
-      background: #0a1e36;
-      color: #fff;
-      padding: 10px 12px;
-      border-radius: 6px;
-      cursor: pointer;
-      writing-mode: vertical-rl;
-    }
+/* ==== Контакты ==== */
+.contacts {
+  background: #1C1F26;
+  padding: 2rem;
+  border-top: 2px solid #00D4FF;
+}
+.contacts a {
+  color: #9A4DFF;
+  text-decoration: none;
+}
+.contacts a:hover {
+  text-decoration: underline;
+}
+
+/* ==== Корпорат ==== */
+.corporate {
+  background: #181B22;
+  padding: 2rem;
+}
+.corporate a {
+  color: #00D4FF;
+}
+.corporate a:hover {
+  color: #9A4DFF;
+}
+
   </style>
 </head>
 <body>
