--- a/index.html
+++ b/index.html
@@ -5,166 +5,225 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>КБ / Производственная студия</title>
   <style>
-/* ==== Основные стили ==== */
+/* Общий стиль */
 body {
-  font-family: 'Segoe UI', Roboto, sans-serif;
   margin: 0;
-  padding: 0;
-  background-color: #111418;
-  color: #E0E0E0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #0b0b0c; /* почти черный фон */
+  color: #e6e6e6; /* светло-серый текст */
 }
 
-/* ==== Шапка ==== */
+a {
+  color: #ff0033; /* агрессивный красный */
+  text-decoration: none;
+}
+
+a:hover {
+  color: #ff3366;
+}
+
+/* Шапка */
 header {
-  background: #1C1F26;
-  color: #E0E0E0;
-  padding: 1rem;
+  background-color: #111;
+  color: #fff;
   text-align: center;
-  border-bottom: 2px solid #00D4FF;
+  padding: 20px;
+  border-bottom: 3px solid #ff0033;
 }
 
-/* ==== CTA полоса ==== */
+header img {
+  max-height: 50px;
+}
+
+/* CTA полоса */
 .cta-bar {
   display: flex;
   justify-content: center;
-  gap: 1.5rem;
-  background: #181B22;
-  padding: 0.8rem;
-  border-top: 1px solid #9A4DFF;
-  border-bottom: 1px solid #9A4DFF;
+  background-color: #1a1a1d;
+  padding: 15px;
+  border-bottom: 2px solid #ff0033;
 }
 
 .cta-bar a {
-  color: #00D4FF;
-  font-size: 1.2rem;
-  text-decoration: none;
-  transition: 0.3s;
-}
-.cta-bar a:hover {
-  color: #9A4DFF;
+  margin: 0 15px;
+  font-size: 1.5rem;
+  color: #ff0033;
 }
 
-/* ==== Главные карточки шагов ==== */
+.cta-bar a:hover {
+  color: #ff3366;
+}
+
+/* Блок шагов */
 .steps {
-  display: grid;
-  gap: 1.5rem;
-  padding: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 40px 20px;
+  background-color: #0f0f11;
 }
 
 .step-card {
-  background: #1C1F26;
-  border-left: 4px solid #00D4FF;
-  padding: 1.5rem;
-  border-radius: 12px;
-  transition: transform 0.2s ease;
+  background-color: #1a1a1d;
+  border: 1px solid #ff0033;
+  border-radius: 10px;
+  margin: 15px;
+  padding: 20px;
+  width: 250px;
+  box-shadow: 0 0 15px rgba(255, 0, 51, 0.3);
+  text-align: center;
 }
-.step-card:hover {
-  transform: translateX(5px);
-}
+
 .step-card h3 {
-  font-size: 1.5rem;
-  color: #00D4FF;
+  color: #ff0033;
+  margin-bottom: 10px;
 }
+
 .step-card p {
   font-style: italic;
-  color: #B0B0B0;
+  color: #ccc;
 }
 
-/* ==== Кейсы ==== */
+/* Кейсы */
 .cases {
-  background: #181B22;
-  padding: 2rem;
+  padding: 40px 20px;
+  background-color: #111;
 }
+
+.cases h2 {
+  text-align: center;
+  color: #ff0033;
+  margin-bottom: 20px;
+}
+
 .case-group {
   display: flex;
-  gap: 1rem;
   justify-content: center;
-}
-.case-img {
-  width: 30%;
-  background: #222;
-  border-radius: 10px;
-  height: 180px;
-  box-shadow: 0 0 10px rgba(0,212,255,0.3);
+  flex-wrap: wrap;
 }
 
-/* ==== Этапы (пайплайн) ==== */
-.pipeline {
-  background: #111418;
-  padding: 2rem;
-}
-.pipeline-step {
-  display: inline-block;
-  margin: 1rem;
-  padding: 1rem 1.5rem;
-  background: #1C1F26;
-  border-radius: 10px;
-  color: #E0E0E0;
-  border: 1px solid #9A4DFF;
-}
-
-/* ==== Отзывы ==== */
-.testimonials {
-  padding: 2rem;
-}
-.testimonial {
-  background: #1C1F26;
-  padding: 1.2rem;
-  border-left: 4px solid #9A4DFF;
-  margin-bottom: 1rem;
+.case-group img {
+  margin: 10px;
+  max-width: 200px;
+  border: 2px solid #ff0033;
   border-radius: 8px;
+}
+
+/* Этапы */
+.pipeline {
+  background-color: #0f0f11;
+  padding: 40px 20px;
+}
+
+.pipeline h2 {
+  text-align: center;
+  color: #ff0033;
+  margin-bottom: 20px;
+}
+
+.roadmap {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.roadmap .stage {
+  background: #1a1a1d;
+  border: 1px solid #ff0033;
+  border-radius: 8px;
+  padding: 20px;
+  margin: 10px;
+  text-align: center;
+  width: 150px;
+  box-shadow: 0 0 10px rgba(255, 0, 51, 0.3);
+}
+
+/* Отзывы */
+.reviews {
+  background-color: #111;
+  padding: 40px 20px;
+}
+
+.reviews h2 {
+  text-align: center;
+  color: #ff0033;
+  margin-bottom: 20px;
+}
+
+.review {
+  margin: 20px auto;
+  max-width: 600px;
+  padding: 20px;
+  border-left: 3px solid #ff0033;
+  background-color: #1a1a1d;
   font-style: italic;
 }
 
-/* ==== FAQ ==== */
+/* FAQ */
 .faq {
-  padding: 2rem;
+  background-color: #0f0f11;
+  padding: 40px 20px;
 }
+
+.faq h2 {
+  text-align: center;
+  color: #ff0033;
+  margin-bottom: 20px;
+}
+
 .faq-item {
-  background: #181B22;
-  margin: 0.5rem 0;
-  border-radius: 8px;
-  overflow: hidden;
+  margin-bottom: 15px;
 }
-.faq-question {
-  padding: 1rem;
-  cursor: pointer;
+
+.faq-item summary {
   font-weight: bold;
-  color: #00D4FF;
-}
-.faq-answer {
-  padding: 1rem;
-  display: none;
-  color: #C0C0C0;
-}
-.faq-item.active .faq-answer {
-  display: block;
+  cursor: pointer;
+  color: #ff0033;
 }
 
-/* ==== Контакты ==== */
+.faq-item p {
+  margin: 10px 0 0;
+  color: #ccc;
+}
+
+/* Контакты */
 .contacts {
-  background: #1C1F26;
-  padding: 2rem;
-  border-top: 2px solid #00D4FF;
-}
-.contacts a {
-  color: #9A4DFF;
-  text-decoration: none;
-}
-.contacts a:hover {
-  text-decoration: underline;
+  background-color: #111;
+  padding: 40px 20px;
 }
 
-/* ==== Корпорат ==== */
+.contacts h2 {
+  text-align: center;
+  color: #ff0033;
+  margin-bottom: 20px;
+}
+
+.contact-list {
+  text-align: center;
+}
+
+.contact-list a {
+  display: block;
+  margin: 5px 0;
+  color: #ff3366;
+}
+
+/* Корпоративный блок */
 .corporate {
-  background: #181B22;
-  padding: 2rem;
+  background-color: #0f0f11;
+  padding: 40px 20px;
 }
+
+.corporate h2 {
+  text-align: center;
+  color: #ff0033;
+  margin-bottom: 20px;
+}
+
 .corporate a {
-  color: #00D4FF;
-}
-.corporate a:hover {
-  color: #9A4DFF;
+  display: block;
+  margin: 5px 0;
+  color: #ff3366;
 }
 
   </style>
